plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.0'
    id 'io.spring.dependency-management' version '1.1.5'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

ext {
    containerBinPackingVersion = '4.0.0'
}

group = 'org.delta'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
}

dependencies {
    //3D binpacking api
    implementation "com.github.skjolber.3d-bin-container-packing:core:${containerBinPackingVersion}"
    implementation 'com.github.hschneid:xflp:0.7-RELEASE'
    implementation 'com.google.guava:guava:33.0.0-jre'  // Required dependency for xflp

    // Excel (.xlsx a .xls) support – Apache POI
    implementation 'org.apache.poi:poi:5.2.5'
    implementation 'org.apache.poi:poi-ooxml:5.2.5'

    // Spring Boot Web (REST API)
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // Spring Boot JPA + Hibernate
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // JDBC (pokud chceš používat JdbcTemplate)
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'

    // PostgreSQL driver
    runtimeOnly 'org.postgresql:postgresql:42.6.0'

    // JSON serializace (Jackson je už součástí spring-boot-starter-web)
    // implementation 'com.fasterxml.jackson.core:jackson-databind'  // nepotřebné

    // Testování
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation platform('org.junit:junit-bom:5.10.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'

    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5' // pro JSON serializaci
    implementation 'org.springframework.boot:spring-boot-starter-validation'

}

tasks.named('test') {
    useJUnitPlatform()
}
